parser/team02/proyec_v2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AMPER
    AND
    AS
    BAR
    CORCHIN
    CORCHOUT
    CURRENT_DATE
    CURRENT_TIME
    DATABASES
    DATE_PART
    DAY
    DOSPUNTOS
    EXISTS
    EXP
    EXTRACT
    HORA
    HOUR
    ILIKE
    INNER
    INTERVAL
    JOIN
    LIKE
    MINUTE
    MODE
    MONTH
    NOT
    OR
    OR2
    ORDER
    OWNER
    PRECISION
    RENAME
    REPLACE
    SECOND
    SHOW
    SIMILAR
    TIME
    TO
    USING
    VARYING
    WITH
    WITHOUT
    YEAR
    ZONE

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> creartable PUNTOCOMA
Rule 5     instruccion -> createbase PUNTOCOMA
Rule 6     instruccion -> expresion2
Rule 7     instruccion -> insertstatement PUNTOCOMA
Rule 8     instruccion -> selecttable PUNTOCOMA
Rule 9     instruccion -> error
Rule 10    instruccion4 -> creartable INHERITS PARENIN ID PARENOUT PUNTOCOMA
Rule 11    instruccion4 -> createbase PUNTOCOMA
Rule 12    instruccion4 -> createbase2 PUNTOCOMA
Rule 13    instruccion4 -> DROP TABLE ID PUNTOCOMA
Rule 14    instruccion4 -> altertable
Rule 15    instruccion4 -> ddm PUNTOCOMA
Rule 16    instruccion4 -> error
Rule 17    createbase -> CREATE DATABASE ID
Rule 18    createbase -> CREATE error DATABASE ID
Rule 19    createbase -> CREATE DATABASE error ID
Rule 20    createbase2 -> CREATE DATABASE IF NOT2 EXIST2 ID
Rule 21    createbase2 -> CREATE error DATABASE IF NOT2 EXIST2 ID
Rule 22    createbase2 -> CREATE DATABASE error IF NOT2 EXIST2 ID
Rule 23    createbase2 -> CREATE DATABASE IF error NOT2 EXIST2 ID
Rule 24    altertable -> ALTER TABLE ID
Rule 25    altertable -> ALTER COLUMN ID TYPE TIPODATO
Rule 26    altertable -> ALTER TABLE ID ADD COLUMN ID TIPODATO
Rule 27    altertable -> ALTER TABLE ID ADD CHECK PARENIN condition PARENOUT
Rule 28    altertable -> ALTER TABLE ID DROP COLUMN ID
Rule 29    altertable -> ALTER TABLE ID DROP CONSTRAINT ID
Rule 30    altertable -> ALTER TABLE ID ALTER COLUMN ID SET NOT2 NULL
Rule 31    ddm -> insertstatement
Rule 32    ddm -> UPDATE ID SET ID IGUAL valor wherecondicion
Rule 33    ddm -> UPDATE ID SET ID IGUAL valor
Rule 34    ddm -> DELETE FROM ID wherecondicion
Rule 35    insertstatement -> INSERT INTO ID VALUES PARENIN valores PARENOUT
Rule 36    valores -> valores COMA expresion_num
Rule 37    valores -> expresion_num
Rule 38    wherecondicion -> WHERE condition
Rule 39    wherecondicion -> WHERE condition AND2 condition
Rule 40    wherecondicion -> <empty>
Rule 41    creartable -> CREATE TABLE ID PARENIN params PARENOUT
Rule 42    creartable -> CREATE TABLE ID PARENIN PARENOUT
Rule 43    selecttable -> SELECT selectclausules FROM selectbody wherecondicion
Rule 44    selecttable -> SELECT selectclausules FROM selectbody wherecondicion GROUP BY valores
Rule 45    selecttable -> SELECT selectclausules FROM selectbody wherecondicion GROUP BY valores HAVING funciones
Rule 46    selectbody -> ID
Rule 47    selectbody -> PARENIN selecttable PARENOUT
Rule 48    selectbody -> ID ID
Rule 49    selectclausules -> POR
Rule 50    selectclausules -> innert
Rule 51    innert -> innert COMA finalv
Rule 52    innert -> innert error finalv
Rule 53    innert -> finalv
Rule 54    finalv -> ID
Rule 55    finalv -> ID PUNTO ID
Rule 56    selectclausules -> DISTINCT valores
Rule 57    selectclausules -> SUBSTRING PARENIN valor COMA valor COMA valor PARENOUT
Rule 58    funciones -> SUM PARENIN ID PARENOUT signos valor
Rule 59    params -> params COMA valores_inside
Rule 60    params -> params error valores_inside
Rule 61    params -> valores_inside
Rule 62    valores_inside -> expresion
Rule 63    valores_inside -> expresion2
Rule 64    expresion -> ID TIPODATO compl
Rule 65    expresion2 -> ID TIPODATO DEFAULT expresion_num compl
Rule 66    compl -> NOT2 NULL
Rule 67    compl -> UNIQUE NOT2 NULL
Rule 68    compl -> UNIQUE
Rule 69    compl -> NOT2 NULL PRIMARY KEY
Rule 70    compl -> PRIMARY KEY
Rule 71    compl -> <empty>
Rule 72    expresion_num -> valor
Rule 73    expresion_num -> operacion_binar
Rule 74    expresion -> PRIMARY KEY PARENIN ID PARENOUT
Rule 75    expresion -> FOREIGN KEY PARENIN ID PARENOUT REFERENCES ID PARENIN ID PARENOUT
Rule 76    condition -> valor signos valor
Rule 77    condition -> valor BETWEEN valor AND2 valor
Rule 78    condition -> SUBSTRING PARENIN valor COMA valor COMA valor PARENOUT signos valor
Rule 79    signos -> MENOR
Rule 80    signos -> MAYOR
Rule 81    signos -> MENOROIGUAL
Rule 82    signos -> MAYOROIGUAL
Rule 83    signos -> IGUALIGUAL
Rule 84    signos -> IGUAL
Rule 85    signos -> NOT2 IN
Rule 86    signos -> IN
Rule 87    signos -> NOIGUAL
Rule 88    signos -> IS NOT2 DISTINCT FROM
Rule 89    signos -> IS DISTINCT FROM
Rule 90    operacion_binar -> valor MAS valor
Rule 91    operacion_binar -> valor MENOS valor
Rule 92    operacion_binar -> valor POR valor
Rule 93    operacion_binar -> valor DIV valor
Rule 94    operacion_binar -> valor PORC valor
Rule 95    valor -> ENTERO
Rule 96    valor -> DECIMAL
Rule 97    valor -> APOST FECHA APOST
Rule 98    valor -> MD5 PARENIN CADENA PARENOUT
Rule 99    valor -> CADENA
Rule 100   valor -> CADENA2
Rule 101   valor -> NOW PARENIN PARENOUT
Rule 102   valor -> ID
Rule 103   valor -> ID PUNTO ID
Rule 104   valor -> PARENIN selecttable PARENOUT
Rule 105   TIPODATO -> TEXT
Rule 106   TIPODATO -> SMALLINT
Rule 107   TIPODATO -> VARCHAR PARENIN ENTERO PARENOUT
Rule 108   TIPODATO -> INTEGER
Rule 109   TIPODATO -> INT
Rule 110   TIPODATO -> BIGINT
Rule 111   TIPODATO -> DECIMAL2
Rule 112   TIPODATO -> NUMERIC
Rule 113   TIPODATO -> REAL
Rule 114   TIPODATO -> DOUBLE
Rule 115   TIPODATO -> CHARACTER
Rule 116   TIPODATO -> CHAR PARENIN ENTERO PARENOUT
Rule 117   TIPODATO -> TIMESTAMP
Rule 118   TIPODATO -> DATETIME
Rule 119   TIPODATO -> FLOAT
Rule 120   TIPODATO -> DATE
Rule 121   TIPODATO -> MONEY

Terminals, with rules where they appear

ADD                  : 26 27
ALTER                : 24 25 26 27 28 29 30 30
AMPER                : 
AND                  : 
AND2                 : 39 77
APOST                : 97 97
AS                   : 
BAR                  : 
BETWEEN              : 77
BIGINT               : 110
BY                   : 44 45
CADENA               : 98 99
CADENA2              : 100
CHAR                 : 116
CHARACTER            : 115
CHECK                : 27
COLUMN               : 25 26 28 30
COMA                 : 36 51 57 57 59 78 78
CONSTRAINT           : 29
CORCHIN              : 
CORCHOUT             : 
CREATE               : 17 18 19 20 21 22 23 41 42
CURRENT_DATE         : 
CURRENT_TIME         : 
DATABASE             : 17 18 19 20 21 22 23
DATABASES            : 
DATE                 : 120
DATETIME             : 118
DATE_PART            : 
DAY                  : 
DECIMAL              : 96
DECIMAL2             : 111
DEFAULT              : 65
DELETE               : 34
DISTINCT             : 56 88 89
DIV                  : 93
DOSPUNTOS            : 
DOUBLE               : 114
DROP                 : 13 28 29
ENTERO               : 95 107 116
EXIST2               : 20 21 22 23
EXISTS               : 
EXP                  : 
EXTRACT              : 
FECHA                : 97
FLOAT                : 119
FOREIGN              : 75
FROM                 : 34 43 44 45 88 89
GROUP                : 44 45
HAVING               : 45
HORA                 : 
HOUR                 : 
ID                   : 10 13 17 18 19 20 21 22 23 24 25 26 26 27 28 28 29 29 30 30 32 32 33 33 34 35 41 42 46 48 48 54 55 55 58 64 65 74 75 75 75 102 103 103
IF                   : 20 21 22 23
IGUAL                : 32 33 84
IGUALIGUAL           : 83
ILIKE                : 
IN                   : 85 86
INHERITS             : 10
INNER                : 
INSERT               : 35
INT                  : 109
INTEGER              : 108
INTERVAL             : 
INTO                 : 35
IS                   : 88 89
JOIN                 : 
KEY                  : 69 70 74 75
LIKE                 : 
MAS                  : 90
MAYOR                : 80
MAYOROIGUAL          : 82
MD5                  : 98
MENOR                : 79
MENOROIGUAL          : 81
MENOS                : 91
MINUTE               : 
MODE                 : 
MONEY                : 121
MONTH                : 
NOIGUAL              : 87
NOT                  : 
NOT2                 : 20 21 22 23 30 66 67 69 85 88
NOW                  : 101
NULL                 : 30 66 67 69
NUMERIC              : 112
OR                   : 
OR2                  : 
ORDER                : 
OWNER                : 
PARENIN              : 10 27 35 41 42 47 57 58 74 75 75 78 98 101 104 107 116
PARENOUT             : 10 27 35 41 42 47 57 58 74 75 75 78 98 101 104 107 116
POR                  : 49 92
PORC                 : 94
PRECISION            : 
PRIMARY              : 69 70 74
PUNTO                : 55 103
PUNTOCOMA            : 4 5 7 8 10 11 12 13 15
REAL                 : 113
REFERENCES           : 75
RENAME               : 
REPLACE              : 
SECOND               : 
SELECT               : 43 44 45
SET                  : 30 32 33
SHOW                 : 
SIMILAR              : 
SMALLINT             : 106
SUBSTRING            : 57 78
SUM                  : 58
TABLE                : 13 24 26 27 28 29 30 41 42
TEXT                 : 105
TIME                 : 
TIMESTAMP            : 117
TO                   : 
TYPE                 : 25
UNIQUE               : 67 68
UPDATE               : 32 33
USING                : 
VALUES               : 35
VARCHAR              : 107
VARYING              : 
WHERE                : 38 39
WITH                 : 
WITHOUT              : 
YEAR                 : 
ZONE                 : 
error                : 9 16 18 19 21 22 23 52 60

Nonterminals, with rules where they appear

TIPODATO             : 25 26 64 65
altertable           : 14
compl                : 64 65
condition            : 27 38 39 39
creartable           : 4 10
createbase           : 5 11
createbase2          : 12
ddm                  : 15
expresion            : 62
expresion2           : 6 63
expresion_num        : 36 37 65
finalv               : 51 52 53
funciones            : 45
init                 : 0
innert               : 50 51 52
insertstatement      : 7 31
instruccion          : 2 3
instruccion4         : 
instrucciones        : 1 2
operacion_binar      : 73
params               : 41 59 60
selectbody           : 43 44 45
selectclausules      : 43 44 45
selecttable          : 8 47 104
signos               : 58 76 78
valor                : 32 33 57 57 57 58 72 76 76 77 77 77 78 78 78 78 90 90 91 91 92 92 93 93 94 94
valores              : 35 36 44 45 56
valores_inside       : 59 60 61
wherecondicion       : 32 34 43 44 45

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . creartable PUNTOCOMA
    (5) instruccion -> . createbase PUNTOCOMA
    (6) instruccion -> . expresion2
    (7) instruccion -> . insertstatement PUNTOCOMA
    (8) instruccion -> . selecttable PUNTOCOMA
    (9) instruccion -> . error
    (41) creartable -> . CREATE TABLE ID PARENIN params PARENOUT
    (42) creartable -> . CREATE TABLE ID PARENIN PARENOUT
    (17) createbase -> . CREATE DATABASE ID
    (18) createbase -> . CREATE error DATABASE ID
    (19) createbase -> . CREATE DATABASE error ID
    (65) expresion2 -> . ID TIPODATO DEFAULT expresion_num compl
    (35) insertstatement -> . INSERT INTO ID VALUES PARENIN valores PARENOUT
    (43) selecttable -> . SELECT selectclausules FROM selectbody wherecondicion
    (44) selecttable -> . SELECT selectclausules FROM selectbody wherecondicion GROUP BY valores
    (45) selecttable -> . SELECT selectclausules FROM selectbody wherecondicion GROUP BY valores HAVING funciones

    error           shift and go to state 9
    CREATE          shift and go to state 10
    ID              shift and go to state 11
    INSERT          shift and go to state 12
    SELECT          shift and go to state 13

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    creartable                     shift and go to state 4
    createbase                     shift and go to state 5
    expresion2                     shift and go to state 6
    insertstatement                shift and go to state 7
    selecttable                    shift and go to state 8

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . creartable PUNTOCOMA
    (5) instruccion -> . createbase PUNTOCOMA
    (6) instruccion -> . expresion2
    (7) instruccion -> . insertstatement PUNTOCOMA
    (8) instruccion -> . selecttable PUNTOCOMA
    (9) instruccion -> . error
    (41) creartable -> . CREATE TABLE ID PARENIN params PARENOUT
    (42) creartable -> . CREATE TABLE ID PARENIN PARENOUT
    (17) createbase -> . CREATE DATABASE ID
    (18) createbase -> . CREATE error DATABASE ID
    (19) createbase -> . CREATE DATABASE error ID
    (65) expresion2 -> . ID TIPODATO DEFAULT expresion_num compl
    (35) insertstatement -> . INSERT INTO ID VALUES PARENIN valores PARENOUT
    (43) selecttable -> . SELECT selectclausules FROM selectbody wherecondicion
    (44) selecttable -> . SELECT selectclausules FROM selectbody wherecondicion GROUP BY valores
    (45) selecttable -> . SELECT selectclausules FROM selectbody wherecondicion GROUP BY valores HAVING funciones

    $end            reduce using rule 1 (init -> instrucciones .)
    error           shift and go to state 9
    CREATE          shift and go to state 10
    ID              shift and go to state 11
    INSERT          shift and go to state 12
    SELECT          shift and go to state 13

    instruccion                    shift and go to state 14
    creartable                     shift and go to state 4
    createbase                     shift and go to state 5
    expresion2                     shift and go to state 6
    insertstatement                shift and go to state 7
    selecttable                    shift and go to state 8

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    CREATE          reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    INSERT          reduce using rule 3 (instrucciones -> instruccion .)
    SELECT          reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> creartable . PUNTOCOMA

    PUNTOCOMA       shift and go to state 15


state 5

    (5) instruccion -> createbase . PUNTOCOMA

    PUNTOCOMA       shift and go to state 16


state 6

    (6) instruccion -> expresion2 .

    error           reduce using rule 6 (instruccion -> expresion2 .)
    CREATE          reduce using rule 6 (instruccion -> expresion2 .)
    ID              reduce using rule 6 (instruccion -> expresion2 .)
    INSERT          reduce using rule 6 (instruccion -> expresion2 .)
    SELECT          reduce using rule 6 (instruccion -> expresion2 .)
    $end            reduce using rule 6 (instruccion -> expresion2 .)


state 7

    (7) instruccion -> insertstatement . PUNTOCOMA

    PUNTOCOMA       shift and go to state 17


state 8

    (8) instruccion -> selecttable . PUNTOCOMA

    PUNTOCOMA       shift and go to state 18


state 9

    (9) instruccion -> error .

    error           reduce using rule 9 (instruccion -> error .)
    CREATE          reduce using rule 9 (instruccion -> error .)
    ID              reduce using rule 9 (instruccion -> error .)
    INSERT          reduce using rule 9 (instruccion -> error .)
    SELECT          reduce using rule 9 (instruccion -> error .)
    $end            reduce using rule 9 (instruccion -> error .)


state 10

    (41) creartable -> CREATE . TABLE ID PARENIN params PARENOUT
    (42) creartable -> CREATE . TABLE ID PARENIN PARENOUT
    (17) createbase -> CREATE . DATABASE ID
    (18) createbase -> CREATE . error DATABASE ID
    (19) createbase -> CREATE . DATABASE error ID

    TABLE           shift and go to state 19
    DATABASE        shift and go to state 20
    error           shift and go to state 21


state 11

    (65) expresion2 -> ID . TIPODATO DEFAULT expresion_num compl
    (105) TIPODATO -> . TEXT
    (106) TIPODATO -> . SMALLINT
    (107) TIPODATO -> . VARCHAR PARENIN ENTERO PARENOUT
    (108) TIPODATO -> . INTEGER
    (109) TIPODATO -> . INT
    (110) TIPODATO -> . BIGINT
    (111) TIPODATO -> . DECIMAL2
    (112) TIPODATO -> . NUMERIC
    (113) TIPODATO -> . REAL
    (114) TIPODATO -> . DOUBLE
    (115) TIPODATO -> . CHARACTER
    (116) TIPODATO -> . CHAR PARENIN ENTERO PARENOUT
    (117) TIPODATO -> . TIMESTAMP
    (118) TIPODATO -> . DATETIME
    (119) TIPODATO -> . FLOAT
    (120) TIPODATO -> . DATE
    (121) TIPODATO -> . MONEY

    TEXT            shift and go to state 23
    SMALLINT        shift and go to state 24
    VARCHAR         shift and go to state 25
    INTEGER         shift and go to state 26
    INT             shift and go to state 27
    BIGINT          shift and go to state 28
    DECIMAL2        shift and go to state 29
    NUMERIC         shift and go to state 30
    REAL            shift and go to state 31
    DOUBLE          shift and go to state 32
    CHARACTER       shift and go to state 33
    CHAR            shift and go to state 34
    TIMESTAMP       shift and go to state 35
    DATETIME        shift and go to state 36
    FLOAT           shift and go to state 37
    DATE            shift and go to state 38
    MONEY           shift and go to state 39

    TIPODATO                       shift and go to state 22

state 12

    (35) insertstatement -> INSERT . INTO ID VALUES PARENIN valores PARENOUT

    INTO            shift and go to state 40


state 13

    (43) selecttable -> SELECT . selectclausules FROM selectbody wherecondicion
    (44) selecttable -> SELECT . selectclausules FROM selectbody wherecondicion GROUP BY valores
    (45) selecttable -> SELECT . selectclausules FROM selectbody wherecondicion GROUP BY valores HAVING funciones
    (49) selectclausules -> . POR
    (50) selectclausules -> . innert
    (56) selectclausules -> . DISTINCT valores
    (57) selectclausules -> . SUBSTRING PARENIN valor COMA valor COMA valor PARENOUT
    (51) innert -> . innert COMA finalv
    (52) innert -> . innert error finalv
    (53) innert -> . finalv
    (54) finalv -> . ID
    (55) finalv -> . ID PUNTO ID

    POR             shift and go to state 42
    DISTINCT        shift and go to state 44
    SUBSTRING       shift and go to state 45
    ID              shift and go to state 47

    selectclausules                shift and go to state 41
    innert                         shift and go to state 43
    finalv                         shift and go to state 46

state 14

    (2) instrucciones -> instrucciones instruccion .

    error           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    CREATE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    INSERT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    SELECT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 15

    (4) instruccion -> creartable PUNTOCOMA .

    error           reduce using rule 4 (instruccion -> creartable PUNTOCOMA .)
    CREATE          reduce using rule 4 (instruccion -> creartable PUNTOCOMA .)
    ID              reduce using rule 4 (instruccion -> creartable PUNTOCOMA .)
    INSERT          reduce using rule 4 (instruccion -> creartable PUNTOCOMA .)
    SELECT          reduce using rule 4 (instruccion -> creartable PUNTOCOMA .)
    $end            reduce using rule 4 (instruccion -> creartable PUNTOCOMA .)


state 16

    (5) instruccion -> createbase PUNTOCOMA .

    error           reduce using rule 5 (instruccion -> createbase PUNTOCOMA .)
    CREATE          reduce using rule 5 (instruccion -> createbase PUNTOCOMA .)
    ID              reduce using rule 5 (instruccion -> createbase PUNTOCOMA .)
    INSERT          reduce using rule 5 (instruccion -> createbase PUNTOCOMA .)
    SELECT          reduce using rule 5 (instruccion -> createbase PUNTOCOMA .)
    $end            reduce using rule 5 (instruccion -> createbase PUNTOCOMA .)


state 17

    (7) instruccion -> insertstatement PUNTOCOMA .

    error           reduce using rule 7 (instruccion -> insertstatement PUNTOCOMA .)
    CREATE          reduce using rule 7 (instruccion -> insertstatement PUNTOCOMA .)
    ID              reduce using rule 7 (instruccion -> insertstatement PUNTOCOMA .)
    INSERT          reduce using rule 7 (instruccion -> insertstatement PUNTOCOMA .)
    SELECT          reduce using rule 7 (instruccion -> insertstatement PUNTOCOMA .)
    $end            reduce using rule 7 (instruccion -> insertstatement PUNTOCOMA .)


state 18

    (8) instruccion -> selecttable PUNTOCOMA .

    error           reduce using rule 8 (instruccion -> selecttable PUNTOCOMA .)
    CREATE          reduce using rule 8 (instruccion -> selecttable PUNTOCOMA .)
    ID              reduce using rule 8 (instruccion -> selecttable PUNTOCOMA .)
    INSERT          reduce using rule 8 (instruccion -> selecttable PUNTOCOMA .)
    SELECT          reduce using rule 8 (instruccion -> selecttable PUNTOCOMA .)
    $end            reduce using rule 8 (instruccion -> selecttable PUNTOCOMA .)


state 19

    (41) creartable -> CREATE TABLE . ID PARENIN params PARENOUT
    (42) creartable -> CREATE TABLE . ID PARENIN PARENOUT

    ID              shift and go to state 48


state 20

    (17) createbase -> CREATE DATABASE . ID
    (19) createbase -> CREATE DATABASE . error ID

    ID              shift and go to state 49
    error           shift and go to state 50


state 21

    (18) createbase -> CREATE error . DATABASE ID

    DATABASE        shift and go to state 51


state 22

    (65) expresion2 -> ID TIPODATO . DEFAULT expresion_num compl

    DEFAULT         shift and go to state 52


state 23

    (105) TIPODATO -> TEXT .

    DEFAULT         reduce using rule 105 (TIPODATO -> TEXT .)
    NOT2            reduce using rule 105 (TIPODATO -> TEXT .)
    UNIQUE          reduce using rule 105 (TIPODATO -> TEXT .)
    PRIMARY         reduce using rule 105 (TIPODATO -> TEXT .)
    PARENOUT        reduce using rule 105 (TIPODATO -> TEXT .)
    COMA            reduce using rule 105 (TIPODATO -> TEXT .)
    error           reduce using rule 105 (TIPODATO -> TEXT .)


state 24

    (106) TIPODATO -> SMALLINT .

    DEFAULT         reduce using rule 106 (TIPODATO -> SMALLINT .)
    NOT2            reduce using rule 106 (TIPODATO -> SMALLINT .)
    UNIQUE          reduce using rule 106 (TIPODATO -> SMALLINT .)
    PRIMARY         reduce using rule 106 (TIPODATO -> SMALLINT .)
    PARENOUT        reduce using rule 106 (TIPODATO -> SMALLINT .)
    COMA            reduce using rule 106 (TIPODATO -> SMALLINT .)
    error           reduce using rule 106 (TIPODATO -> SMALLINT .)


state 25

    (107) TIPODATO -> VARCHAR . PARENIN ENTERO PARENOUT

    PARENIN         shift and go to state 53


state 26

    (108) TIPODATO -> INTEGER .

    DEFAULT         reduce using rule 108 (TIPODATO -> INTEGER .)
    NOT2            reduce using rule 108 (TIPODATO -> INTEGER .)
    UNIQUE          reduce using rule 108 (TIPODATO -> INTEGER .)
    PRIMARY         reduce using rule 108 (TIPODATO -> INTEGER .)
    PARENOUT        reduce using rule 108 (TIPODATO -> INTEGER .)
    COMA            reduce using rule 108 (TIPODATO -> INTEGER .)
    error           reduce using rule 108 (TIPODATO -> INTEGER .)


state 27

    (109) TIPODATO -> INT .

    DEFAULT         reduce using rule 109 (TIPODATO -> INT .)
    NOT2            reduce using rule 109 (TIPODATO -> INT .)
    UNIQUE          reduce using rule 109 (TIPODATO -> INT .)
    PRIMARY         reduce using rule 109 (TIPODATO -> INT .)
    PARENOUT        reduce using rule 109 (TIPODATO -> INT .)
    COMA            reduce using rule 109 (TIPODATO -> INT .)
    error           reduce using rule 109 (TIPODATO -> INT .)


state 28

    (110) TIPODATO -> BIGINT .

    DEFAULT         reduce using rule 110 (TIPODATO -> BIGINT .)
    NOT2            reduce using rule 110 (TIPODATO -> BIGINT .)
    UNIQUE          reduce using rule 110 (TIPODATO -> BIGINT .)
    PRIMARY         reduce using rule 110 (TIPODATO -> BIGINT .)
    PARENOUT        reduce using rule 110 (TIPODATO -> BIGINT .)
    COMA            reduce using rule 110 (TIPODATO -> BIGINT .)
    error           reduce using rule 110 (TIPODATO -> BIGINT .)


state 29

    (111) TIPODATO -> DECIMAL2 .

    DEFAULT         reduce using rule 111 (TIPODATO -> DECIMAL2 .)
    NOT2            reduce using rule 111 (TIPODATO -> DECIMAL2 .)
    UNIQUE          reduce using rule 111 (TIPODATO -> DECIMAL2 .)
    PRIMARY         reduce using rule 111 (TIPODATO -> DECIMAL2 .)
    PARENOUT        reduce using rule 111 (TIPODATO -> DECIMAL2 .)
    COMA            reduce using rule 111 (TIPODATO -> DECIMAL2 .)
    error           reduce using rule 111 (TIPODATO -> DECIMAL2 .)


state 30

    (112) TIPODATO -> NUMERIC .

    DEFAULT         reduce using rule 112 (TIPODATO -> NUMERIC .)
    NOT2            reduce using rule 112 (TIPODATO -> NUMERIC .)
    UNIQUE          reduce using rule 112 (TIPODATO -> NUMERIC .)
    PRIMARY         reduce using rule 112 (TIPODATO -> NUMERIC .)
    PARENOUT        reduce using rule 112 (TIPODATO -> NUMERIC .)
    COMA            reduce using rule 112 (TIPODATO -> NUMERIC .)
    error           reduce using rule 112 (TIPODATO -> NUMERIC .)


state 31

    (113) TIPODATO -> REAL .

    DEFAULT         reduce using rule 113 (TIPODATO -> REAL .)
    NOT2            reduce using rule 113 (TIPODATO -> REAL .)
    UNIQUE          reduce using rule 113 (TIPODATO -> REAL .)
    PRIMARY         reduce using rule 113 (TIPODATO -> REAL .)
    PARENOUT        reduce using rule 113 (TIPODATO -> REAL .)
    COMA            reduce using rule 113 (TIPODATO -> REAL .)
    error           reduce using rule 113 (TIPODATO -> REAL .)


state 32

    (114) TIPODATO -> DOUBLE .

    DEFAULT         reduce using rule 114 (TIPODATO -> DOUBLE .)
    NOT2            reduce using rule 114 (TIPODATO -> DOUBLE .)
    UNIQUE          reduce using rule 114 (TIPODATO -> DOUBLE .)
    PRIMARY         reduce using rule 114 (TIPODATO -> DOUBLE .)
    PARENOUT        reduce using rule 114 (TIPODATO -> DOUBLE .)
    COMA            reduce using rule 114 (TIPODATO -> DOUBLE .)
    error           reduce using rule 114 (TIPODATO -> DOUBLE .)


state 33

    (115) TIPODATO -> CHARACTER .

    DEFAULT         reduce using rule 115 (TIPODATO -> CHARACTER .)
    NOT2            reduce using rule 115 (TIPODATO -> CHARACTER .)
    UNIQUE          reduce using rule 115 (TIPODATO -> CHARACTER .)
    PRIMARY         reduce using rule 115 (TIPODATO -> CHARACTER .)
    PARENOUT        reduce using rule 115 (TIPODATO -> CHARACTER .)
    COMA            reduce using rule 115 (TIPODATO -> CHARACTER .)
    error           reduce using rule 115 (TIPODATO -> CHARACTER .)


state 34

    (116) TIPODATO -> CHAR . PARENIN ENTERO PARENOUT

    PARENIN         shift and go to state 54


state 35

    (117) TIPODATO -> TIMESTAMP .

    DEFAULT         reduce using rule 117 (TIPODATO -> TIMESTAMP .)
    NOT2            reduce using rule 117 (TIPODATO -> TIMESTAMP .)
    UNIQUE          reduce using rule 117 (TIPODATO -> TIMESTAMP .)
    PRIMARY         reduce using rule 117 (TIPODATO -> TIMESTAMP .)
    PARENOUT        reduce using rule 117 (TIPODATO -> TIMESTAMP .)
    COMA            reduce using rule 117 (TIPODATO -> TIMESTAMP .)
    error           reduce using rule 117 (TIPODATO -> TIMESTAMP .)


state 36

    (118) TIPODATO -> DATETIME .

    DEFAULT         reduce using rule 118 (TIPODATO -> DATETIME .)
    NOT2            reduce using rule 118 (TIPODATO -> DATETIME .)
    UNIQUE          reduce using rule 118 (TIPODATO -> DATETIME .)
    PRIMARY         reduce using rule 118 (TIPODATO -> DATETIME .)
    PARENOUT        reduce using rule 118 (TIPODATO -> DATETIME .)
    COMA            reduce using rule 118 (TIPODATO -> DATETIME .)
    error           reduce using rule 118 (TIPODATO -> DATETIME .)


state 37

    (119) TIPODATO -> FLOAT .

    DEFAULT         reduce using rule 119 (TIPODATO -> FLOAT .)
    NOT2            reduce using rule 119 (TIPODATO -> FLOAT .)
    UNIQUE          reduce using rule 119 (TIPODATO -> FLOAT .)
    PRIMARY         reduce using rule 119 (TIPODATO -> FLOAT .)
    PARENOUT        reduce using rule 119 (TIPODATO -> FLOAT .)
    COMA            reduce using rule 119 (TIPODATO -> FLOAT .)
    error           reduce using rule 119 (TIPODATO -> FLOAT .)


state 38

    (120) TIPODATO -> DATE .

    DEFAULT         reduce using rule 120 (TIPODATO -> DATE .)
    NOT2            reduce using rule 120 (TIPODATO -> DATE .)
    UNIQUE          reduce using rule 120 (TIPODATO -> DATE .)
    PRIMARY         reduce using rule 120 (TIPODATO -> DATE .)
    PARENOUT        reduce using rule 120 (TIPODATO -> DATE .)
    COMA            reduce using rule 120 (TIPODATO -> DATE .)
    error           reduce using rule 120 (TIPODATO -> DATE .)


state 39

    (121) TIPODATO -> MONEY .

    DEFAULT         reduce using rule 121 (TIPODATO -> MONEY .)
    NOT2            reduce using rule 121 (TIPODATO -> MONEY .)
    UNIQUE          reduce using rule 121 (TIPODATO -> MONEY .)
    PRIMARY         reduce using rule 121 (TIPODATO -> MONEY .)
    PARENOUT        reduce using rule 121 (TIPODATO -> MONEY .)
    COMA            reduce using rule 121 (TIPODATO -> MONEY .)
    error           reduce using rule 121 (TIPODATO -> MONEY .)


state 40

    (35) insertstatement -> INSERT INTO . ID VALUES PARENIN valores PARENOUT

    ID              shift and go to state 55


state 41

    (43) selecttable -> SELECT selectclausules . FROM selectbody wherecondicion
    (44) selecttable -> SELECT selectclausules . FROM selectbody wherecondicion GROUP BY valores
    (45) selecttable -> SELECT selectclausules . FROM selectbody wherecondicion GROUP BY valores HAVING funciones

    FROM            shift and go to state 56


state 42

    (49) selectclausules -> POR .

    FROM            reduce using rule 49 (selectclausules -> POR .)


state 43

    (50) selectclausules -> innert .
    (51) innert -> innert . COMA finalv
    (52) innert -> innert . error finalv

    FROM            reduce using rule 50 (selectclausules -> innert .)
    COMA            shift and go to state 57
    error           shift and go to state 58


state 44

    (56) selectclausules -> DISTINCT . valores
    (36) valores -> . valores COMA expresion_num
    (37) valores -> . expresion_num
    (72) expresion_num -> . valor
    (73) expresion_num -> . operacion_binar
    (95) valor -> . ENTERO
    (96) valor -> . DECIMAL
    (97) valor -> . APOST FECHA APOST
    (98) valor -> . MD5 PARENIN CADENA PARENOUT
    (99) valor -> . CADENA
    (100) valor -> . CADENA2
    (101) valor -> . NOW PARENIN PARENOUT
    (102) valor -> . ID
    (103) valor -> . ID PUNTO ID
    (104) valor -> . PARENIN selecttable PARENOUT
    (90) operacion_binar -> . valor MAS valor
    (91) operacion_binar -> . valor MENOS valor
    (92) operacion_binar -> . valor POR valor
    (93) operacion_binar -> . valor DIV valor
    (94) operacion_binar -> . valor PORC valor

    ENTERO          shift and go to state 63
    DECIMAL         shift and go to state 64
    APOST           shift and go to state 65
    MD5             shift and go to state 66
    CADENA          shift and go to state 68
    CADENA2         shift and go to state 69
